--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </ol>
       <div class="carousel-inner" id="carousel-inner">
         <div class="carousel-item active" id="carousel-item">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-1.jpg" alt="Restaurant Image-1">
+          <img class="d-block w-100" src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-1.jpg" alt="Restaurant Image-1">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
               <div class="col-md-8 col-sm-12">
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-2.jpg" alt="Restaurant Image-2">
+          <img class="d-block w-100" src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-2.jpg" alt="Restaurant Image-2">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
               <div class="col-md-8 col-sm-12">
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-3.jpg" alt="Restaurant Image-3">
+          <img class="d-block w-100" src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-3.jpg" alt="Restaurant Image-3">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
               <div class="col-md-8 col-sm-12">
