--- a/menu.html
+++ b/menu.html
@@ -195,7 +195,8 @@
     <div class="copyright">
       <p>Copyright © 2022 Haukai Restaurant</p>
     </div>
-  </div>
+    <button class="back-to-top-btn btn-rounded" id="back-to-top" type="button">Back to top</button>
+</div>
 </footer>
 </body>
 </html>
