New image files added and code mods

--- a/menu.html
+++ b/menu.html
@@ -42,10 +42,10 @@
       </div>
     </nav>
     </header>
+    <div class="leftcolumn">
+      <div class="card">
+
     <div class="menu-page">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
           <h2>Appitizers</h2>
           <ul>
             <li>
@@ -69,9 +69,9 @@
                 <p>Crumbed mussels, salt and pepper squid, crumbed hoki bites and garlic prawns.</p>
               </li>
           </ul>
-        </div>
-        <div class="menu-section">
-            <div class=" grid-item grid-item-2">
+              </div>
+          </div>
+          <div class="card">
           <h2>Mains</h2>
           <ul>
             <li>
@@ -100,7 +100,9 @@
                 <p>Venison crusted with Horopito, served with glazed plums, cabbage salad and red wine jus.</p>
               </li>
           </ul>
-          <h2>Desserts</h2>
+        </div>
+          <div class="card">
+            <h2>Desserts</h2>
           <ul>
             <li>
               <h3>Kapiti Ice Cream - $10</h3>
@@ -117,13 +119,12 @@
               <li>
                 <h3>Banoffee Pie - $16</h3>
                 <p>Toffee, fresh bananas and fresh cream.</p>
-            </li>
-          </ul>
+              </li>
+            </ul>
           </div>
-        </div>
-        <div class="col-md-6">
+        <div class="card">
           <h2>Beverages</h2>
-          <ul>
+            <ul>
               <li>
                   <h3>Red Wine - B/G</h3>
                   <p>Terrace Edge Pinot Noir, 2012, Wairarapa - 53/13</p>
@@ -164,38 +165,69 @@
                   <p>Coffee - 4.5</p>
                   <p>Tea - 3.5</p>
               </li>
-          </ul>
+            </ul>
+          </div>
+      </div>
+      <div class="rightcolumn">
+        <div class="card">
+          <h2>Come Dine!</h2>
+          <h5>Book a table with us and get a slice of Aotearoa</h5>
+          <div class=" fakeimg">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+          </div>
+          <div class=" fakeimg-1">
+            <div src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+              <p>
+              </p>
             </div>
+            </div>
+            </div>
+            <div class="card">
+              <h2>Relaxation</h2>
+          <div class=" fakeimg">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Contact.jpg" alt="Entrance Path Lit With Colourful Lanterns">
+          </div>
+          <div class=" fakeimg-1">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
           </div>
         </div>
+        <div class="card">
+          <h2></h2>
+        <div class=" fakeimg">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+          </div>
+          <div class=" fakeimg">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+          </div>
         </div>
-<footer>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <h3>Haukai Restaurant</h3>
-        <p>1 Island Street</p>
-        <p>Keri Keri, Bay of Islands, New Zealand</p>
-      </div>
-      <div class="col">
-        <h3>Contact Us</h3>
-        <ul>
-          <li><a href="mailto:haukairestaurant@gmail.com">haukairestaurant@gmail.com</a></li>
-          <li>+64 09 401 4019</li>
-        </ul>
-      </div>
-      <div class="col">
-        <h3>Links</h3>
-        <ul>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms of Use</a></li>
-        </ul>
-      </div>
     </div>
-    <div class="copyright">
-      <p>Copyright © 2022 Haukai Restaurant</p>
-    </div>
-</div>
-</footer>
-</body>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h3>Haukai Restaurant</h3>
+              <p>1 Island Street</p>
+              <p>Keri Keri, New Zealand</p>
+            </div>
+            <div class="col">
+              <h3>Contact Us</h3>
+              <ul>
+                <li><a href="mailto:haukairestaurant@gmail.com">haukairestaurant@gmail.com</a></li>
+                <li>+64 09 401 4019</li>
+              </ul>
+            </div>
+            <div class="col">
+              <h3>Links</h3>
+              <ul>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Use</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="copyright">
+            <p>Copyright © 2022 Haukai Restaurant</p>
+          </div>
+        </div>
+      </footer>
+  </body>
 </html>
