--- a/reservations.html
+++ b/reservations.html
@@ -38,6 +38,9 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+          <li class="nav-item">
+            <button class="transparent-btn btn-rounded" id="reservations-btn" type="button" href="reservations.html">Reservations</button>
+          </li>
         </ul>
       </div>
     </nav>
@@ -45,7 +48,9 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1>Make a Reservation</h1>
+            <div class="leftcolumn">
+              <div class="card">
+            <h1 class="card-title">Make a Reservation</h1>
           <form>
             <div class="form-group">
               <label for="name">Name</label>
@@ -80,16 +85,35 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
             </form>
-          </div>
-        </div>
-      </div>
+            </div>
+           </div>
+            <div class="rightcolumn">
+              <div class="card">
+                <div class=" fakeimg">
+                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+                </div>
+              </div>
+              <div class="card">
+                <div class=" fakeimg">
+                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-1.jpg" alt="Restaurant Image-1">
+                </div>
+              </div>
+              <div class="card">
+                <div class=" fakeimg">
+                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Reservations.jpg" alt="Restaurant Kitchen Image">
+                </div>
+              </div>
+              </div>
+            </div>
+            </div>
+           </div>
       <footer>
         <div class="container">
           <div class="row">
             <div class="col">
               <h3>Haukai Restaurant</h3>
               <p>1 Island Street</p>
-              <p>Keri Keri, Bay of Islands, New Zealand</p>
+              <p>Keri Keri, New Zealand</p>
             </div>
             <div class="col">
               <h3>Contact Us</h3>
