--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </ol>
       <div class="carousel-inner" id="carousel-inner">
         <div class="carousel-item active" id="carousel-item">
-          <img class="d-block w-100" src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-1.jpg" alt="Restaurant Image-1">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-1.jpg" alt="Restaurant Image-1">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
               <div class="col-md-8 col-sm-12">
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-2.jpg" alt="Restaurant Image-2">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-2.jpg" alt="Restaurant Image-2">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
               <div class="col-md-8 col-sm-12">
@@ -77,14 +77,14 @@
                   <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
                   <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
                   <button class="transparent-btn btn-rounded" id="menu-btn-1" type="button" href="menu.html">Our Menu</button>
-                  <button class="transparent-btn btn-rounded" id="reservations-btn-4" type="button" href="reservations.html">Reservations</button>
+                  <button class="transparent-btn btn-rounded" id="reservations-btn-2" type="button" href="reservations.html">Reservations</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-3.jpg" alt="Restaurant Image-3">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-3.jpg" alt="Restaurant Image-3">
           <div class="container position-relative text-center text-lg-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
               <div class="col-md-8 col-sm-12">
