1 deletion, addition of new file, code mods

--- a/reservations.html
+++ b/reservations.html
@@ -87,7 +87,7 @@
             </form>
             </div>
            </div>
-            <div class="rightcolumn">
+            <div class="rightcolumn r1">
               <div class="card">
                 <div class=" fakeimg">
                   <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
@@ -96,6 +96,11 @@
               <div class="card">
                 <div class=" fakeimg">
                   <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-1.jpg" alt="Restaurant Image-1">
+                </div>
+              </div>
+              <div class="card">
+                <div class=" fakeimg">
+                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Reservations.jpg" alt="Restaurant Kitchen Image">
                 </div>
               </div>
               <div class="card">
