--- a/hours.html
+++ b/hours.html
@@ -38,13 +38,21 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+           <li class="nav-item">
+            <button class="transparent-btn btn-rounded" id="reservations-btn" type="button" href="reservations.html">Reservations</button>
+          </li>
         </ul>
       </div>
     </nav>
     </header>
-    <div class="hours-page text-center">
-        <h1>Our Hours</h1>
-        <p>Please feel free to book a reservation with us. It will be our pleasure to serve you.</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="hours-page text-center">
+      <div class="leftcolumn">
+        <div class="card c2">
+      <h1 class="hours">Our Hours</h1>
+        <p>Enjoy what Haukai has to offer, book a reservation with us. It will be our pleasure to serve you.</p>
         <ul>
           <li>Wednesday: 4:00 PM - 9:00 PM</li>
           <li>Thursday: 4:00 PM - 9:00 PM</li>
@@ -53,8 +61,34 @@
           <li>Sunday: 4:00 PM - 9:00 PM</li>
         </ul>
         <p class="p1">*Note: Hours may vary on holidays</p>
+        </div>
+        </div>
+        <div class="rightcolumn r3">
+          <div class="card c3">
+            <div class="fakeimg">
+            </div>
+          </div>
+          <div class="card c3">
+            <div class="fakeimg">
+            </div>
+          </div>
+          <div class="card c3">
+            <div class="fakeimg">
+            </div>
+          </div>
+          <div class="card c3">
+            <div class="fakeimg">
+            </div>
+          </div><div class="card c3">
+            <div class="fakeimg">
+            </div>
+          </div>
+        </div>
+       </div>
+       </div>
       </div>
-      <footer>
+    </div>
+    <footer>
         <div class="container">
           <div class="row">
             <div class="col">
@@ -93,5 +127,12 @@
           });
         });
       </script>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     </body>
 </html>
