--- a/menu.html
+++ b/menu.html
@@ -38,95 +38,100 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
+          <li class="nav-item">
+            <button class="transparent-btn btn-rounded" id="reservations-btn" type="button" href="reservations.html">Reservations</button>
+          </li>
         </ul>
       </div>
     </nav>
     </header>
-    <div class="leftcolumn">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="leftcolumn">
       <div class="card">
-
     <div class="menu-page">
-          <h2>Appitizers</h2>
+          <h2 class="course">Appitizers</h2>
           <ul>
             <li>
-              <h3>Rewena Bread - $10</h3>
+              <h3 class="dish">Rewena Bread - $10</h3>
               <p>Traditional Maori bread</p>
             </li>
             <li>
-              <h3>Paua Friiter - $16</h3>
+              <h3 class="dish">Paua Friiter - $16</h3>
               <p>Finely diced pieces of paua, served with a side salad and horopito dressing</p>
             </li>
             <li>
-                <h3>Raw Fish - $20</h3>
+                <h3 class="dish">Raw Fish - $20</h3>
                 <p>Dried snapper fish marinated in coconut cream, served with tomatoes and spring onions. </p>
               </li>
               <li>
-                <h3>Poached Salmon - $22</h3>
+                <h3 class="dish">Poached Salmon - $22</h3>
                 <p>Salmon poached in an orange and pistachio glaze, served with rewena bread.</p>
               </li>
               <li>
-                <h3>Sea Basket - $25</h3>
+                <h3 class="dish">Sea Basket - $25</h3>
                 <p>Crumbed mussels, salt and pepper squid, crumbed hoki bites and garlic prawns.</p>
               </li>
           </ul>
               </div>
           </div>
           <div class="card">
-          <h2>Mains</h2>
+          <h2 class="course">Mains</h2>
           <ul>
             <li>
-              <h3>Fish Of The Day - $25</h3>
+              <h3 class="dish">Fish Of The Day - $25</h3>
               <p>Beer-battered fish and kumara fries, served with a side salad and homemade tartare.</p>
             </li>
             <li>
-              <h3>Mussels And Scallops - $25</h3>
+              <h3 class="dish">Mussels And Scallops - $25</h3>
               <p>Steamed mussel and scallop mousse, honey and soy broth.</p>
             </li>
             <li>
-                <h3>Seafood Chowder - $30</h3>
+                <h3 class="dish">Seafood Chowder - $30</h3>
                 <p>Creamy chowder filled with tarakihi, prawn, hoki, scallops and mussels, served with flatbread.</p>
               </li>
                <li>
-                <h3>Pork Belly - $30</h3>
+                <h3 class="dish">Pork Belly - $30</h3>
                 <p>Slow-cooked pork belly served on a bed of apple slaw with roasted kumara and crispy noodles.</p>
               </li>
               <li>
-                <h3>Lamb Steak - $33</h3>
+                <h3 class="dish">Lamb Steak - $33</h3>
                 <p>New Zealand lamb coated in a kawakawa crumb, served with Dijon-mustard-glazed carrots, roasted butternut
                     squash and mushroom jus.</p>
               </li>
               <li>
-                <h3>Venison - $33</h3>
+                <h3 class="dish">Venison - $33</h3>
                 <p>Venison crusted with Horopito, served with glazed plums, cabbage salad and red wine jus.</p>
               </li>
           </ul>
         </div>
           <div class="card">
-            <h2>Desserts</h2>
+            <h2 class="course">Desserts</h2>
           <ul>
             <li>
-              <h3>Kapiti Ice Cream - $10</h3>
+              <h3 class="dish">Kapiti Ice Cream - $10</h3>
               <p>Check for daily specials.</p>
             </li>
             <li>
-              <h3>Steamed Pudding - $12</h3>
+              <h3 class="dish">Steamed Pudding - $12</h3>
               <p>Golden-syrup-flavoured steamed pudding, served with vanilla ice cream.</p>
             </li>
             <li>
-                <h3>Mini Pavlova - $16</h3>
+                <h3 class="dish">Mini Pavlova - $16</h3>
                 <p>Mini pavlova, served with kawakawa and lemon-infused cream and fresh fruit.</p>
               </li>
               <li>
-                <h3>Banoffee Pie - $16</h3>
+                <h3 class="dish">Banoffee Pie - $16</h3>
                 <p>Toffee, fresh bananas and fresh cream.</p>
               </li>
             </ul>
           </div>
         <div class="card">
-          <h2>Beverages</h2>
+          <h2 class="course">Beverages</h2>
             <ul>
               <li>
-                  <h3>Red Wine - B/G</h3>
+                  <h3 class="dish">Red Wine - B/G</h3>
                   <p>Terrace Edge Pinot Noir, 2012, Wairarapa - 53/13</p>
                   <p>Altitude Pinot Noir, 2010, Marlborough - 64/15</p>
                   <p>Greystone Pinot Noir, 2012, Wairarapa - 73/17</p>
@@ -137,7 +142,7 @@
                   <p>Pegasus Bay Pinot Noir, 2013, Waipara - 110</p>
               </li>
               <li>
-                  <h3>White Whine - B/G</h3>
+                  <h3 class="dish">White Whine - B/G</h3>
                   <p>Spade Oak Pinot Gris, 2011, Gisborne - 40/10</p>
                   <p>Maude Pinot Gris, 2017, Otago - 49.5/11</p>
                   <p>Charles Wiffen Chardonnay, 2013, Otago- 48/11</p>
@@ -148,7 +153,7 @@
                   <p>Billecart-Salmon Brut Reserve, France - 120</p>
               </li>
               <li>
-                  <h3>Beer And Cider</h3>
+                  <h3 class="dish">Beer And Cider</h3>
                   <p>Garage project range - 11</p>
                   <p>Tuatara range - 11</p>
                   <p>Panhead range - 10</p>
@@ -158,7 +163,7 @@
                   <p>Crooked Cider - 10</p>
               </li>
               <li>
-                  <h3>Non-Alcoholic</h3>
+                  <h3 class="dish">Non-Alcoholic</h3>
                   <p>Mineral water - 4</p>
                   <p>Soft drink - 4</p>
                   <p>Juice - 4</p>
@@ -171,36 +176,68 @@
       <div class="rightcolumn">
         <div class="card">
           <h2>Come Dine!</h2>
-          <h5>Book a table with us and get a slice of Aotearoa</h5>
           <div class=" fakeimg">
             <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
           </div>
-          <div class=" fakeimg-1">
-            <div src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
-              <p>
-              </p>
-            </div>
-            </div>
+          <p class="p2">Experience Aoteroa (NZ) cuisine for yourself. You'll leave planning your next meal.</p>
             </div>
             <div class="card">
               <h2>Relaxation</h2>
           <div class=" fakeimg">
             <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Contact.jpg" alt="Entrance Path Lit With Colourful Lanterns">
           </div>
-          <div class=" fakeimg-1">
+          <div class=" fakeimg">
             <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
           </div>
+          <p class="p2">Hello</p>
         </div>
         <div class="card">
-          <h2></h2>
+          <h2>Hello</h2>
         <div class=" fakeimg">
             <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
           </div>
           <div class=" fakeimg">
             <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
           </div>
+          <p class="p2">Hello</p>
+          <div class=" fakeimg">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+          </div>
+          <p class="p2">Hello</p>
         </div>
     </div>
+    <div class="rightcolumn">
+      <div class="card">
+        <h2>Come Dine!</h2>
+        <div class=" fakeimg">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+        </div>
+        <p class="p2">Hello</p>
+        </div>
+          <div class="card">
+            <h2>Relaxation</h2>
+        <div class=" fakeimg">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Contact.jpg" alt="Entrance Path Lit With Colourful Lanterns">
+        </div>
+        <div class=" fakeimg">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+        </div>
+        <p class="p2">Hello</p>
+      </div>
+      <div class="card">
+        <h2>Hello</h2>
+      <div class=" fakeimg">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+        </div>
+        <div class=" fakeimg">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+        </div>
+        <p class="p2">Hello</p>
+      </div>
+      </div>
+      </div>
+      </div>
+     </div>
       <footer>
         <div class="container">
           <div class="row">
@@ -229,5 +266,12 @@
           </div>
         </div>
       </footer>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   </body>
 </html>
