New Images added and source code adjustments

--- a/menu.html
+++ b/menu.html
@@ -182,57 +182,50 @@
           <p class="p2">Experience Aoteroa (NZ) cuisine for yourself. You'll leave planning your next meal.</p>
             </div>
             <div class="card">
-              <h2>Relaxation</h2>
           <div class=" fakeimg">
             <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Contact.jpg" alt="Entrance Path Lit With Colourful Lanterns">
           </div>
           <div class=" fakeimg">
-            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic1.jpg" alt="Restaurant In the Evening Image">
           </div>
-          <p class="p2">Hello</p>
         </div>
         <div class="card">
-          <h2>Hello</h2>
+          <h2>Fresh is best!</h2>
         <div class=" fakeimg">
-            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Menu1.jpg" alt="Restaurant In the Evening Image">
           </div>
           <div class=" fakeimg">
-            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Menu2.jpg" alt="Restaurant In the Evening Image">
           </div>
-          <p class="p2">Hello</p>
           <div class=" fakeimg">
-            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Menu3.jpg" alt="Restaurant In the Evening Image">
           </div>
-          <p class="p2">Hello</p>
+          <p class="p2">In Keri Keri, New Zealand we are spoilt for ingredients sources as we are a great agricultural nation, but also known for our fresh seafood.</p>
         </div>
     </div>
     <div class="rightcolumn">
       <div class="card">
-        <h2>Come Dine!</h2>
+        <h2>Comfort guaranteed</h2>
         <div class=" fakeimg">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic2.jpg" alt="Restaurant In the Evening Image">
         </div>
-        <p class="p2">Hello</p>
         </div>
           <div class="card">
-            <h2>Relaxation</h2>
         <div class=" fakeimg">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Contact.jpg" alt="Entrance Path Lit With Colourful Lanterns">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic3.jpg" alt="Entrance Path Lit With Colourful Lanterns">
         </div>
         <div class=" fakeimg">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic4.jpg" alt="Restaurant In the Evening Image">
         </div>
-        <p class="p2">Hello</p>
       </div>
       <div class="card">
-        <h2>Hello</h2>
       <div class=" fakeimg">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Beverages.jpg" alt="Restaurant In the Evening Image">
         </div>
         <div class=" fakeimg">
           <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
         </div>
-        <p class="p2">Hello</p>
+        <p class="p2">Relax in the ambient surroundings and unwind with food and culture for any occasion.</p>
       </div>
       </div>
       </div>
