Changes to code

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <div class="col-md-8 col-sm-12">
                 <div class="carousel-caption">
                   <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
-                  <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
+                  <p class="caption-paragraph">Kia Ora (hello), our restaurant strives to give our patrons a unique cultural experience at Haukai that will indulge the tastebuds, and also culturally enlightened.</p>
                   <button class="transparent-btn btn-rounded" id="menu-btn" type="button" href="menu.html">Our Menu</button>
                   <button class="transparent-btn btn-rounded" id="reservations-btn-1" type="button" href="reservations.html">Reservations</button>
                 </div>
@@ -74,8 +74,8 @@
             <div class="row">
               <div class="col-md-8 col-sm-12">
                 <div class="carousel-caption">
-                  <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
-                  <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
+                  <h1 class="caption-heading">A taste of Aotearoa (NZ)</h1>
+                  <p class="caption-paragraph">Experience the best of Aotearoa seafood and produce that is locally sourced.</p>
                   <button class="transparent-btn btn-rounded" id="menu-btn-1" type="button" href="menu.html">Our Menu</button>
                   <button class="transparent-btn btn-rounded" id="reservations-btn-2" type="button" href="reservations.html">Reservations</button>
                 </div>
@@ -89,8 +89,9 @@
             <div class="row">
               <div class="col-md-8 col-sm-12">
                 <div class="carousel-caption">
-                  <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
-                  <p class="caption-paragraph">Experience the best of New Zealand's seafood and produce.</p>
+                  <h1 class="caption-heading">Enlightning</h1>
+                  <p class="caption-paragraph">Here at Haukai we give a unique experience gently immersing the patron through the indigenous culture of Aotearoa {NZ) that is Maori.
+                    Great way to share a meal with your whanau (family).</p>
                   <button class="transparent-btn btn-rounded" id="menu-btn-2" type="button" href="menu.html">Our Menu</button>
                   <button class="transparent-btn btn-rounded" id="reservations-btn-3" type="button" href="reservations.html">Reservations</button>
                 </div>
