Final improvements before final code revisions

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
             <div class="contact-page">
               <div class="leftcolumn">
                 <div class="card c4">
-                   <h1>Contact Us</h1>
+                   <h1 class="card-title">Contact Us</h1>
               <div class="contact-info" id="text">
                 <p>Address: 1 Island St, Keri Keri, Bay of Island, New Zealand</p>
                 <p>Phone: 09-401-4019</p>
