--- a/hours.html
+++ b/hours.html
@@ -79,7 +79,16 @@
           <div class="card c3">
             <div class="fakeimg">
             </div>
-          </div><div class="card c3">
+          </div>
+          <div class="card c3">
+            <div class="fakeimg">
+            </div>
+          </div>
+          <div class="card c3">
+            <div class="fakeimg">
+            </div>
+          </div>
+          <div class="card c3">
             <div class="fakeimg">
             </div>
           </div>
