--- a/menu.html
+++ b/menu.html
@@ -186,19 +186,19 @@
             <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Contact.jpg" alt="Entrance Path Lit With Colourful Lanterns">
           </div>
           <div class=" fakeimg">
-            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic1.jpg" alt="Restaurant In the Evening Image">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic1.jpg" alt="Front counter Image">
           </div>
         </div>
         <div class="card">
           <h2>Fresh is best!</h2>
         <div class=" fakeimg">
-            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Menu1.jpg" alt="Restaurant In the Evening Image">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Menu1.jpg" alt="Generic Food Image-1">
           </div>
           <div class=" fakeimg">
-            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Menu2.jpg" alt="Restaurant In the Evening Image">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Menu2.jpg" alt="Generic Food Image-2">
           </div>
           <div class=" fakeimg">
-            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Menu3.jpg" alt="Restaurant In the Evening Image">
+            <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Menu3.jpg" alt="Generic Food Image-3">
           </div>
           <p class="p2">In Keri Keri, New Zealand we are spoilt for ingredients sources as we are a great agricultural nation, but also known for our fresh seafood.</p>
         </div>
@@ -207,23 +207,23 @@
       <div class="card">
         <h2>Comfort guaranteed</h2>
         <div class=" fakeimg">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic2.jpg" alt="Restaurant In the Evening Image">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic2.jpg" alt="Generic Food Image-4">
         </div>
         </div>
           <div class="card">
         <div class=" fakeimg">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic3.jpg" alt="Entrance Path Lit With Colourful Lanterns">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic3.jpg" alt="Generic Food Image-5">
         </div>
         <div class=" fakeimg">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic4.jpg" alt="Restaurant In the Evening Image">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Generic4.jpg" alt="Generic Food Image-6">
         </div>
       </div>
       <div class="card">
       <div class=" fakeimg">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Beverages.jpg" alt="Restaurant In the Evening Image">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Beverages.jpg" alt="Serving Beverages Image">
         </div>
         <div class=" fakeimg">
-          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Hours.jpg" alt="Restaurant In the Evening Image">
+          <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Events3.jpg" alt="Busy Bar Image">
         </div>
         <p class="p2">Relax in the ambient surroundings and unwind with food and culture for any occasion.</p>
       </div>
