--- a/reservations.html
+++ b/reservations.html
@@ -95,17 +95,17 @@
               </div>
               <div class="card">
                 <div class=" fakeimg">
-                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-1.jpg" alt="Restaurant Image-1">
+                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Event1.jpg" alt="Restaurant Image-1">
                 </div>
               </div>
               <div class="card">
                 <div class=" fakeimg">
-                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Reservations.jpg" alt="Restaurant Kitchen Image">
+                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Event2.jpg" alt="Restaurant Kitchen Image">
                 </div>
               </div>
               <div class="card">
                 <div class=" fakeimg">
-                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\img\Reservations.jpg" alt="Restaurant Kitchen Image">
+                  <img src="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\assets\slide\slide-2.jpg" alt="Restaurant Kitchen Image">
                 </div>
               </div>
               </div>
