editing splelling mistake in diplayed strings

--- a/hours.html
+++ b/hours.html
@@ -103,8 +103,7 @@
             <div class="col">
               <h3>Haukai Restaurant</h3>
               <p>1 Island Street</p>
-              <p>Keri Keri, Bay of Islands, New Zealand</p>
-              <p>09 401 4019</p>
+              <p>Keri Keri, New Zealand</p>
             </div>
             <div class="col">
               <h3>Contact Us</h3>
@@ -126,7 +125,6 @@
           </div>
         </div>
       </footer>
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
       <script>
         $(document).ready(function(){
           $('.hours-page li').hover(function(){
