--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
     <header class="header bg-transparent">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <a class="navbar-brand" href="#">Haukai</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item" >
@@ -29,16 +29,13 @@
             <a class="nav-link" href="menu.html">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="reservations.html">Reservations</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="hours.html">Hours</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
            <li class="nav-item">
-            <button class="transparent-btn btn-rounded" id="reservations-btn" type="button" href="reservations.html">Reservations</button>
+            <a class="transparent-btn btn-rounded" id="reservations-btn" href="reservations.html">Reservations</a>
           </li>
         </ul>
       </div>
@@ -52,7 +49,7 @@
                 <div class="card c4">
                    <h1 class="card-title">Contact Us</h1>
               <div class="contact-info" id="text">
-                <p>Address: 1 Island St, Keri Keri, Bay of Island, New Zealand</p>
+                <p>Address: 1 Island Street, Keri Keri, Bay of Islands, New Zealand</p>
                 <p>Phone: 09-401-4019</p>
                 <p>Email: haukairestaurant@gmail.com</p>
               </div>
@@ -96,9 +93,8 @@
             </div>
           </div>
         </footer>
-        <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3mbMUVmk6zrriBrjRZMqGHLMbP0KpsPE&callback=initMap">
-    </script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3mbMUVmk6zrriBrjRZMqGHLMbP0KpsPE&callback=initMap"></script>
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkclhIGpzlpxefPyJY2_d1cJz_yZwDcO4"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
