--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <header class="header bg-transparent">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">Haukai</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-      </button>
+      </a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item" >
@@ -31,16 +31,13 @@
             <a class="nav-link" href="menu.html">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="reservations.html">Reservations</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="hours.html">Hours</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
           <li class="nav-item">
-            <button class="transparent-btn btn-rounded" id="reservations-btn" type="button" href="reservations.html">Reservations</button>
+            <a class="transparent-btn btn-rounded" id="reservations-btn" href="reservations.html">Reservations</a>
           </li>
         </ul>
       </div>
@@ -61,8 +58,8 @@
                 <div class="carousel-caption">
                   <h1 class="caption-heading">Welcome to Haukai Restaurant</h1>
                   <p class="caption-paragraph">Kia Ora (hello), our restaurant strives to give our patrons a unique cultural experience at Haukai that will indulge the tastebuds, and also culturally enlightened.</p>
-                  <button class="transparent-btn btn-rounded" id="menu-btn" type="button" href="menu.html">Our Menu</button>
-                  <button class="transparent-btn btn-rounded" id="reservations-btn-1" type="button" href="reservations.html">Reservations</button>
+                  <a class="transparent-btn btn-rounded" id="menu-btn" href="menu.html">Our Menu</a>
+                  <a class="transparent-btn btn-rounded" id="reservations-btn-1" href="reservations.html">Reservations</a>
                 </div>
               </div>
             </div>
@@ -76,8 +73,8 @@
                 <div class="carousel-caption">
                   <h1 class="caption-heading">A taste of Aotearoa (NZ)</h1>
                   <p class="caption-paragraph">Experience the best of Aotearoa seafood and produce that is locally sourced.</p>
-                  <button class="transparent-btn btn-rounded" id="menu-btn-1" type="button" href="menu.html">Our Menu</button>
-                  <button class="transparent-btn btn-rounded" id="reservations-btn-2" type="button" href="reservations.html">Reservations</button>
+                  <a class="transparent-btn btn-rounded" id="menu-btn-1" href="menu.html">Our Menu</a>
+                  <a class="transparent-btn btn-rounded" id="reservations-btn-2" href="reservations.html">Reservations</a>
                 </div>
               </div>
             </div>
@@ -92,8 +89,8 @@
                   <h1 class="caption-heading">Enlightning</h1>
                   <p class="caption-paragraph">Here at Haukai we give a unique experience gently immersing the patron through the indigenous culture of Aotearoa {NZ) that is Maori.
                     Great way to share a meal with your whanau (family).</p>
-                  <button class="transparent-btn btn-rounded" id="menu-btn-2" type="button" href="menu.html">Our Menu</button>
-                  <button class="transparent-btn btn-rounded" id="reservations-btn-3" type="button" href="reservations.html">Reservations</button>
+                  <a class="transparent-btn btn-rounded" id="menu-btn-2" href="menu.html">Our Menu</a>
+                  <a class="transparent-btn btn-rounded" id="reservations-btn-3" href="reservations.html">Reservations</a>
                 </div>
               </div>
             </div>
@@ -101,7 +98,7 @@
         </div>
       </div>
     </div>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
