--- a/login.html
+++ b/login.html
@@ -12,13 +12,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
   	<link rel="stylesheet" href="style.css">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'GA_MEASUREMENT_ID');
-    </script>
   </head>
   <body class="contact-page">
     <header class="header bg-transparent">
@@ -52,32 +45,17 @@
     </nav>
     </header>
       <div class="container">
-        <div class="row">
-          <div class="col-md-6">
             <div class="contact-page">
-              <div class="leftcolumn">
-                <div class="card c4">
-                   <h1 class="card-title">Contact Us</h1>
-              <div class="contact-info" id="text">
-                <p>Address: 1 Island Street, Keri Keri, Bay of Islands, New Zealand</p>
-                <p>Phone: 09-401-4019</p>
-                <p>Email: haukairestaurant@gmail.com</p>
-              </div>
-                </div>
+                <div class="card">
+                   <h1 class="card-title">Restricted Access Area</h1>
+                    <p>Please click the button to access the restricted Haukai Restaurant adminisrtation area</p>
+                    <button type="submit" class="btn btn-primary" href="C:\Users\Laptop\OneDrive\Desktop\BIT 607 Web Development AS 2\private\.htaccess">login</button>
+                  </div>
               </div>
             </div>
-        </div>
-          <div class="col-md-6">
-            <div class="map-container" id="map">
-              <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9729.026496990979!2d172.63462987612803!3d-43.53451725608305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d318a189a455eef%3A0x87565fdd69de5dde!2sLittle%20High%20Eatery!5e0!3m2!1sen!2snz!4v1670366510448!5m2!1sen!2snz"
-               loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Google Map Locator"></iframe>              <div id="map-error"></div>
-              </div>
-            </div>
-          </div>
-        </div>
         <footer>
           <div class="container">
-            <div class="row">
+            <div class="row r4">
               <div class="col">
                 <h3>Haukai Restaurant</h3>
                 <p>1 Island Street</p>
