--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <header class="header bg-transparent">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#">Haukai</a>
+      <div class="navbar-brand">Haukai</div>
       <a class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </a>
@@ -42,9 +42,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="home.html">Login</a>
           </li>
           <li class="nav-item">
             <a class="transparent-btn btn-rounded" id="reservations-btn" href="reservations.html">Reservations</a>
